fix: 🐞 added link in the footer and fixed lines spacing
added link in the footer and fixed lines spacing

--- a/src/components/containers/Main/DoingIt/DoingIt.module.scss
+++ b/src/components/containers/Main/DoingIt/DoingIt.module.scss
@@ -49,7 +49,7 @@
 			}
 
 			&__title {
-				margin: 7px 0 3px;
+				margin: 10px 0;
 				font-size: 2.4rem;
 				font-weight: 600;
 				color: map.get($colors, text-color);
@@ -58,6 +58,7 @@
 
 			&__text {
 				font-size: 1.6rem;
+				font-weight: 400;
 				color: map.get($colors, text-color);
 				text-align: center;
 			}
